maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: not found: value keppHandOnSideWall
        keppHandOnSideWall();
        ^